<?xml version="1.0"?>
<package format="2">
  <name>video2img_ros</name>
  <version>0.0.1</version>
  <description>The video2img_ros package</description>

  <maintainer email="kissw@hanyang.ac.kr">kissw</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
